--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,11 @@ language: c
 notifications:
     email: false
 
+before_install:
+    - pip install --user codecov
+
 #script: make
 script: ./run.sh
+
+after_success:
+    - codecov
