--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: c
 notifications:
     email: false
 
-before_script:
+before_install:
     - pip install --user codecov
 
 #script: make
 script: 
     - ./run.sh
 
-after_script:
+after_success:
+    - codecov
     - bash <(curl -s https://codecov.io/bash)
