Reorganised and started on CP

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@ a.out
 
 # Executables
 *.exe
-*.out
 
 ####=== Code Coverage ===####
 *.gcov
 *.gcda
 *.gcno
+
+###=== Testing Code ====####
+*.test
